[gd_scene load_steps=4 format=4 uid="uid://cbp411fx35ogf"]

[ext_resource type="Script" path="res://Scripts/Levels/BossRoom.gd" id="1_6pc43"]
[ext_resource type="TileSet" uid="uid://dcy4xc7kldp64" path="res://Scenes/Levels/Map TileSet.tres" id="2_47cx0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r4ix8"]
size = Vector2(406.25, 229)

[node name="BossRoom" type="Node2D"]
script = ExtResource("1_6pc43")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AADy//f/AAAAAAMAAADy//j/AAAAAAMAAADy//n/AAAAAAMAAADy//r/AAAAAAMAAADy//v/AAAAAAMAAADy//z/AAAAAAMAAADy//3/AAAAAAMAAADy//7/AAAAAAMAAADy////AAAAAAMAAADy/wAAAAAAAAMAAADy/wEAAAAAAAMAAADy/wIAAAAAAAMAAADy/wMAAAAAAAMAAADy/wQAAAAAAAMAAADy/wUAAAAAAAMAAADy/wYAAAAAAAMAAADy/wcAAAAAAAMAAADy/wgAAAAAAAMAAADz//f/AAAAAAMAAADz//j/AAABAAMAAADz//n/AAABAAAAAADz//r/AAABAAAAAADz//v/AAABAAAAAADz//z/AAABAAAAAADz//3/AAABAAAAAADz//7/AAABAAAAAADz////AAABAAAAAADz/wAAAAABAAAAAADz/wEAAAABAAAAAADz/wIAAAABAAAAAADz/wMAAAABAAAAAADz/wQAAAABAAAAAADz/wUAAAABAAAAAADz/wYAAAABAAAAAADz/wcAAAAAAAIAAADz/wgAAAAAAAMAAAD0//f/AAAAAAMAAAD0//j/AAADAAAAAAD0//n/AQAKAAEAAAD0//r/AQAKAAEAAAD0//v/AQAKAAEAAAD0//z/AQAKAAEAAAD0//3/AQAKAAEAAAD0//7/AQAKAAEAAAD0////AQAKAAEAAAD0/wAAAQAKAAEAAAD0/wEAAQAKAAEAAAD0/wIAAQAKAAEAAAD0/wMAAQAKAAEAAAD0/wQAAQAKAAEAAAD0/wUAAQAKAAEAAAD0/wYAAQAKAAEAAAD0/wcAAAABAAIAAAD0/wgAAAAAAAMAAAD1//f/AAAAAAMAAAD1//j/AAADAAAAAAD1//n/AQAKAAEAAAD1//r/AQAKAAEAAAD1//v/AQAKAAEAAAD1//z/AQAKAAEAAAD1//3/AQAKAAEAAAD1//7/AQAKAAEAAAD1////AQAKAAEAAAD1/wAAAQAKAAEAAAD1/wEAAQAKAAEAAAD1/wIAAQAKAAEAAAD1/wMAAQAKAAEAAAD1/wQAAQAKAAEAAAD1/wUAAQAKAAEAAAD1/wYAAQAKAAEAAAD1/wcAAAABAAIAAAD1/wgAAAAAAAMAAAD2//f/AAAAAAMAAAD2//j/AAADAAAAAAD2//n/AQAKAAEAAAD2//r/AQAKAAEAAAD2//v/AQAKAAEAAAD2//z/AQAKAAEAAAD2//3/AQAKAAEAAAD2//7/AQAKAAEAAAD2////AQAKAAEAAAD2/wAAAQAKAAEAAAD2/wEAAQAKAAEAAAD2/wIAAQAKAAEAAAD2/wMAAQAKAAEAAAD2/wQAAQAKAAEAAAD2/wUAAQAKAAEAAAD2/wYAAQAKAAEAAAD2/wcAAAABAAIAAAD2/wgAAAAAAAMAAAD3//f/AAAAAAMAAAD3//j/AAADAAAAAAD3//n/AQAKAAEAAAD3//r/AQAKAAEAAAD3//v/AQAKAAEAAAD3//z/AQAKAAEAAAD3//3/AQAKAAEAAAD3//7/AQAKAAEAAAD3////AQAKAAEAAAD3/wAAAQAKAAEAAAD3/wEAAQAKAAEAAAD3/wIAAQAKAAEAAAD3/wMAAQAKAAEAAAD3/wQAAQAKAAEAAAD3/wUAAQAKAAEAAAD3/wYAAQAKAAEAAAD3/wcAAAABAAIAAAD3/wgAAAAAAAMAAAD4//f/AAAAAAMAAAD4//j/AAADAAAAAAD4//n/AQAKAAEAAAD4//r/AQAKAAEAAAD4//v/AQAKAAEAAAD4//z/AQAKAAEAAAD4//3/AQAKAAEAAAD4//7/AQAKAAEAAAD4////AQAKAAEAAAD4/wAAAQAKAAEAAAD4/wEAAQAKAAEAAAD4/wIAAQAKAAEAAAD4/wMAAQAKAAEAAAD4/wQAAQAKAAEAAAD4/wUAAQAKAAEAAAD4/wYAAQAKAAEAAAD4/wcAAAABAAIAAAD4/wgAAAAAAAMAAAD5//f/AAAAAAMAAAD5//j/AAADAAAAAAD5//n/AQAKAAEAAAD5//r/AQAKAAEAAAD5//v/AQAKAAEAAAD5//z/AQAKAAEAAAD5//3/AQAKAAEAAAD5//7/AQAKAAEAAAD5////AQAKAAEAAAD5/wAAAQAKAAEAAAD5/wEAAQAKAAEAAAD5/wIAAQAKAAEAAAD5/wMAAQAKAAEAAAD5/wQAAQAKAAEAAAD5/wUAAQAKAAEAAAD5/wYAAQAKAAEAAAD5/wcAAAABAAIAAAD5/wgAAAAAAAMAAAD6//f/AAAAAAMAAAD6//j/AAADAAAAAAD6//n/AQAKAAEAAAD6//r/AQAIAAAAAAD6//v/AQAIAAEAAAD6//z/AQAIAAEAAAD6//3/AQAIAAEAAAD6//7/AQAIAAEAAAD6////AQAIAAEAAAD6/wAAAQAIAAEAAAD6/wEAAQAIAAEAAAD6/wIAAQAIAAEAAAD6/wMAAQAIAAEAAAD6/wQAAQAIAAEAAAD6/wUAAQAIAAMAAAD6/wYAAQAKAAEAAAD6/wcAAAABAAIAAAD6/wgAAAAAAAMAAAD7//f/AAAAAAMAAAD7//j/AAADAAAAAAD7//n/AQAKAAEAAAD7//r/AQAKAAAAAAD7//v/AQAJAAIAAAD7//z/AQAJAAIAAAD7//3/AQAJAAIAAAD7//7/AQAJAAIAAAD7////AQAJAAIAAAD7/wAAAQAJAAIAAAD7/wEAAQAJAAIAAAD7/wIAAQAJAAIAAAD7/wMAAQAJAAIAAAD7/wQAAQAJAAIAAAD7/wUAAQAJAAMAAAD7/wYAAQAKAAEAAAD7/wcAAAABAAIAAAD7/wgAAAAAAAMAAAD8//f/AAAAAAMAAAD8//j/AAADAAAAAAD8//n/AQAKAAEAAAD8//r/AQAKAAAAAAD8//v/AQAJAAIAAAD8//z/AQAJAAIAAAD8//3/AQAJAAIAAAD8//7/AQAJAAIAAAD8////AQAJAAIAAAD8/wAAAQAJAAIAAAD8/wEAAQAJAAIAAAD8/wIAAQAJAAIAAAD8/wMAAQAJAAIAAAD8/wQAAQAMAAwAAAD8/wUAAQAJAAMAAAD8/wYAAQAKAAEAAAD8/wcAAAABAAIAAAD8/wgAAAAAAAMAAAD9//f/AAAAAAMAAAD9//j/AAADAAAAAAD9//n/AQAKAAEAAAD9//r/AQAKAAAAAAD9//v/AQAMAAwAAAD9//z/AQAJAAIAAAD9//3/AQAJAAIAAAD9//7/AQAJAAIAAAD9////AQAJAAIAAAD9/wAAAQAMAAwAAAD9/wEAAQAJAAIAAAD9/wIAAQAJAAIAAAD9/wMAAQAJAAIAAAD9/wQAAQAJAAIAAAD9/wUAAQAJAAMAAAD9/wYAAQAKAAEAAAD9/wcAAAABAAIAAAD9/wgAAAAAAAMAAAD+//f/AAAAAAMAAAD+//j/AAADAAAAAAD+//n/AQAKAAEAAAD+//r/AQAKAAAAAAD+//v/AQAJAAIAAAD+//z/AQAJAAIAAAD+//3/AQAJAAIAAAD+//7/AQAJAAIAAAD+////AQAJAAIAAAD+/wAAAQAJAAIAAAD+/wEAAQAJAAIAAAD+/wIAAQAMAAwAAAD+/wMAAQAJAAIAAAD+/wQAAQAJAAIAAAD+/wUAAQAJAAMAAAD+/wYAAQAKAAEAAAD+/wcAAAABAAIAAAD+/wgAAAAAAAMAAAD///f/AAAAAAMAAAD///j/AAADAAAAAAD///n/AQAKAAEAAAD///r/AQAKAAAAAAD///v/AQAJAAIAAAD///z/AQAJAAIAAAD///3/AQAJAAIAAAD///7/AQAJAAIAAAD/////AQAJAAIAAAD//wAAAQAJAAIAAAD//wEAAQAJAAIAAAD//wIAAQAJAAIAAAD//wMAAQAJAAIAAAD//wQAAQAJAAIAAAD//wUAAQAJAAMAAAD//wYAAQAKAAEAAAD//wcAAAALAAMAAAD//wgAAAAAAAMAAAAAAPf/AAAAAAMAAAAAAPj/AAADAAAAAAAAAPn/AQAKAAEAAAAAAPr/AQAKAAAAAAAAAPv/AQAJAAIAAAAAAPz/AQAJAAIAAAAAAP3/AQAJAAIAAAAAAP7/AQAJAAIAAAAAAP//AQAJAAIAAAAAAAAAAQAJAAIAAAAAAAEAAQAJAAIAAAAAAAIAAQAJAAIAAAAAAAMAAQAJAAIAAAAAAAQAAQAJAAIAAAAAAAUAAQAKAAMAAAAAAAYAAQAAAAIAAAAAAAcAAAAMAAMAAAAAAAgAAAAAAAMAAAABAPf/AAAAAAMAAAABAPj/AAADAAAAAAABAPn/AQAKAAEAAAABAPr/AQAKAAAAAAABAPv/AQAJAAIAAAABAPz/AQAJAAIAAAABAP3/AQAJAAIAAAABAP7/AQAJAAIAAAABAP//AQAJAAIAAAABAAAAAQAJAAIAAAABAAEAAQAJAAIAAAABAAIAAQAJAAIAAAABAAMAAQAJAAIAAAABAAQAAQAJAAIAAAABAAUAAQAJAAMAAAABAAYAAQAKAAEAAAABAAcAAAANAAMAAAABAAgAAAAAAAMAAAACAPf/AAAAAAMAAAACAPj/AAADAAAAAAACAPn/AQAKAAEAAAACAPr/AQAKAAAAAAACAPv/AQAJAAIAAAACAPz/AQAJAAIAAAACAP3/AQAJAAIAAAACAP7/AQAJAAIAAAACAP//AQAJAAIAAAACAAAAAQAMAAwAAAACAAEAAQAJAAIAAAACAAIAAQAJAAIAAAACAAMAAQAJAAIAAAACAAQAAQAJAAIAAAACAAUAAQAJAAMAAAACAAYAAQAKAAEAAAACAAcAAAABAAIAAAACAAgAAAAAAAMAAAADAPf/AAAAAAMAAAADAPj/AAADAAAAAAADAPn/AQAKAAEAAAADAPr/AQAKAAAAAAADAPv/AQAJAAIAAAADAPz/AQAJAAIAAAADAP3/AQAJAAIAAAADAP7/AQAJAAIAAAADAP//AQAJAAIAAAADAAAAAQAJAAIAAAADAAEAAQAJAAIAAAADAAIAAQAJAAIAAAADAAMAAQAMAAwAAAADAAQAAQAJAAIAAAADAAUAAQAJAAMAAAADAAYAAQAKAAEAAAADAAcAAAABAAIAAAADAAgAAAAAAAMAAAAEAPf/AAAAAAMAAAAEAPj/AAADAAAAAAAEAPn/AQAKAAEAAAAEAPr/AQAKAAAAAAAEAPv/AQAJAAIAAAAEAPz/AQAMAAwAAAAEAP3/AQAJAAIAAAAEAP7/AQAMAAwAAAAEAP//AQAJAAIAAAAEAAAAAQAJAAIAAAAEAAEAAQAJAAIAAAAEAAIAAQAJAAIAAAAEAAMAAQAMAAwAAAAEAAQAAQAJAAIAAAAEAAUAAQAJAAMAAAAEAAYAAQAKAAEAAAAEAAcAAAABAAIAAAAEAAgAAAAAAAMAAAAFAPf/AAAAAAMAAAAFAPj/AAADAAAAAAAFAPn/AQAKAAEAAAAFAPr/AQAKAAAAAAAFAPv/AQAJAAIAAAAFAPz/AQAJAAIAAAAFAP3/AQAJAAIAAAAFAP7/AQAJAAIAAAAFAP//AQAJAAIAAAAFAAAAAQAJAAIAAAAFAAEAAQAJAAIAAAAFAAIAAQAJAAIAAAAFAAMAAQAJAAIAAAAFAAQAAQAJAAIAAAAFAAUAAQAJAAMAAAAFAAYAAQAKAAEAAAAFAAcAAAABAAIAAAAFAAgAAAAAAAMAAAAGAPf/AAAAAAMAAAAGAPj/AAADAAAAAAAGAPn/AQAKAAEAAAAGAPr/AQALAAAAAAAGAPv/AQALAAIAAAAGAPz/AQALAAIAAAAGAP3/AQALAAIAAAAGAP7/AQALAAIAAAAGAP//AQALAAIAAAAGAAAAAQALAAIAAAAGAAEAAQALAAIAAAAGAAIAAQALAAIAAAAGAAMAAQALAAIAAAAGAAQAAQALAAIAAAAGAAUAAQALAAMAAAAGAAYAAQAKAAEAAAAGAAcAAAABAAIAAAAGAAgAAAAAAAMAAAAHAPf/AAAAAAMAAAAHAPj/AAADAAAAAAAHAPn/AQAKAAEAAAAHAPr/AQAKAAEAAAAHAPv/AQAKAAEAAAAHAPz/AQAKAAEAAAAHAP3/AQAKAAEAAAAHAP7/AQAKAAEAAAAHAP//AQAKAAEAAAAHAAAAAQAKAAEAAAAHAAEAAQAKAAEAAAAHAAIAAQAKAAEAAAAHAAMAAQAKAAEAAAAHAAQAAQAKAAEAAAAHAAUAAQAKAAEAAAAHAAYAAQAKAAEAAAAHAAcAAAABAAIAAAAHAAgAAAAAAAMAAAAIAPf/AAAAAAMAAAAIAPj/AAADAAAAAAAIAPn/AQAKAAEAAAAIAPr/AQAKAAEAAAAIAPv/AQAKAAEAAAAIAPz/AQAKAAEAAAAIAP3/AQAKAAEAAAAIAP7/AQAKAAEAAAAIAP//AQAKAAEAAAAIAAAAAQAKAAEAAAAIAAEAAQAKAAEAAAAIAAIAAQAKAAEAAAAIAAMAAQAKAAEAAAAIAAQAAQAKAAEAAAAIAAUAAQAKAAEAAAAIAAYAAQAKAAEAAAAIAAcAAAABAAIAAAAIAAgAAAAAAAMAAAAJAPf/AAAAAAMAAAAJAPj/AAADAAAAAAAJAPn/AQAKAAEAAAAJAPr/AQAKAAEAAAAJAPv/AQAKAAEAAAAJAPz/AQAKAAEAAAAJAP3/AQAKAAEAAAAJAP7/AQAKAAEAAAAJAP//AQAKAAEAAAAJAAAAAQAKAAEAAAAJAAEAAQAKAAEAAAAJAAIAAQAKAAEAAAAJAAMAAQAKAAEAAAAJAAQAAQAKAAEAAAAJAAUAAQAKAAEAAAAJAAYAAQAKAAEAAAAJAAcAAAABAAIAAAAJAAgAAAAAAAMAAAAKAPf/AAAAAAMAAAAKAPj/AAADAAAAAAAKAPn/AQAKAAEAAAAKAPr/AQAKAAEAAAAKAPv/AQAKAAEAAAAKAPz/AQAKAAEAAAAKAP3/AQAKAAEAAAAKAP7/AQAKAAEAAAAKAP//AQAKAAEAAAAKAAAAAQAKAAEAAAAKAAEAAQAKAAEAAAAKAAIAAQAKAAEAAAAKAAMAAQAKAAEAAAAKAAQAAQAKAAEAAAAKAAUAAQAKAAEAAAAKAAYAAQAKAAEAAAAKAAcAAAABAAIAAAAKAAgAAAAAAAMAAAALAPf/AAAAAAMAAAALAPj/AAADAAAAAAALAPn/AQAKAAEAAAALAPr/AQAKAAEAAAALAPv/AQAKAAEAAAALAPz/AQAKAAEAAAALAP3/AQAKAAEAAAALAP7/AQAKAAEAAAALAP//AQAKAAEAAAALAAAAAQAKAAEAAAALAAEAAQAKAAEAAAALAAIAAQAKAAEAAAALAAMAAQAKAAEAAAALAAQAAQAKAAEAAAALAAUAAQAKAAEAAAALAAYAAQAKAAEAAAALAAcAAAABAAIAAAALAAgAAAAAAAMAAAAMAPf/AAAAAAMAAAAMAPj/AAADAAAAAAAMAPn/AQAKAAEAAAAMAPr/AQAKAAEAAAAMAPv/AQAKAAEAAAAMAPz/AQAKAAEAAAAMAP3/AQAKAAEAAAAMAP7/AQAKAAEAAAAMAP//AQAKAAEAAAAMAAAAAQAKAAEAAAAMAAEAAQAKAAEAAAAMAAIAAQAKAAEAAAAMAAMAAQAKAAEAAAAMAAQAAQAKAAEAAAAMAAUAAQAKAAEAAAAMAAYAAQAKAAEAAAAMAAcAAAABAAIAAAAMAAgAAAAAAAMAAAANAPf/AAAAAAMAAAANAPj/AAAAAAAAAAANAPn/AAADAAIAAAANAPr/AAADAAIAAAANAPv/AAADAAIAAAANAPz/AAADAAIAAAANAP3/AAADAAIAAAANAP7/AAADAAIAAAANAP//AAADAAIAAAANAAAAAAADAAIAAAANAAEAAAADAAIAAAANAAIAAAADAAIAAAANAAMAAAADAAIAAAANAAQAAAADAAIAAAANAAUAAAADAAIAAAANAAYAAAADAAIAAAANAAcAAAADAAMAAAANAAgAAAAAAAMAAAAOAPf/AAAAAAMAAAAOAPj/AAAAAAMAAAAOAPn/AAAAAAMAAAAOAPr/AAAAAAMAAAAOAPv/AAAAAAMAAAAOAPz/AAAAAAMAAAAOAP3/AAAAAAMAAAAOAP7/AAAAAAMAAAAOAP//AAAAAAMAAAAOAAAAAAAAAAMAAAAOAAEAAAAAAAMAAAAOAAIAAAAAAAMAAAAOAAMAAAAAAAMAAAAOAAQAAAAAAAMAAAAOAAUAAAAAAAMAAAAOAAYAAAAAAAMAAAAOAAcAAAAAAAMAAAAOAAgAAAAAAAMAAAA=")
tile_set = ExtResource("2_47cx0")
metadata/_edit_lock_ = true

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="BossSpawn" type="Marker2D" parent="SpawnPoints"]
position = Vector2(8, -48)

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(7.875, -0.5)
shape = SubResource("RectangleShape2D_r4ix8")

[node name="RoomEnter" type="Marker2D" parent="."]
position = Vector2(8, 104)

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
